--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyDatabase;Trusted_Connection=True;"
+    "DefaultConnection": "Server=sadraq\\SADI;Database=SADI;User Id=sa;Password=183382;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
